--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.hason.dtp</groupId>
     <artifactId>distributed-transaction-process</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <mysql.version>5.1.48</mysql.version>
+    </properties>
     <modules>
         <!-- <module>rm-account</module> -->
         <module>ms-discovery-eureka</module>
@@ -25,4 +29,13 @@
 
     <name>Distributed Transaction Process</name>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
