--- a/tcc-transaction/tcc-integral/pom.xml
+++ b/tcc-transaction/tcc-integral/pom.xml
@@ -12,6 +12,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.4.3.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <properties>
@@ -19,6 +20,7 @@
         <tcc-integral-api.version>1.0-SNAPSHOT</tcc-integral-api.version>
         <tcc.version>1.1.5.2</tcc.version>
         <postgresql.version>42.1.1</postgresql.version>
+        <mysql.version>5.1.48</mysql.version>
         <druid.version>1.1.0</druid.version>
         <jackson.version>2.9.7</jackson.version>
         <feign-httpclient.version>8.18.0</feign-httpclient.version>
@@ -100,10 +102,15 @@
         </dependency>
 
         <!-- JDBC -->
+<!--        <dependency>-->
+<!--            <groupId>org.postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <version>${postgresql.version}</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>${postgresql.version}</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
         </dependency>
 
         <!-- 数据源，使用 Druid -->
